@@ -36,7 +36,7 @@ class Order extends Application {
 
         $this->data['pagebody'] = 'show_menu';
         $this->data['order_num'] = $order_num;
-        //FIXME
+        $this->data['title'] = "Order # " . $order_num . ' ($' . number_format($this->orders->total($order_num),2) . ')';
 
         // Make the columns
         $this->data['meals'] = $this->make_column('m');
@@ -70,8 +70,7 @@ class Order extends Application {
     
     // make a menu ordering column
     function make_column($category) {
-        //FIXME
-        return $items;
+        return $this->menu->some('category', $category);
     }
 
     // add an item to an order
